fix: slash cursor bugs on firefox

--- a/packages/plugin-slash/style/style.css
+++ b/packages/plugin-slash/style/style.css
@@ -66,8 +66,22 @@
     }
 }
 
-.slash-placeholder {
+.empty-node {
+    position: relative;
+}
+
+.empty-node::before {
+    position: absolute;
+    cursor: text;
     font-family: var(--font);
     font-size: 0.875rem;
     color: palette(neutral, 0.6);
+    content: attr(data-text);
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.is-slash::before {
+    left: 0.5rem;
 }
